samples/errors/type-error/module.tsx
import { declareModule, makeExtrajsxModule } from '../../../src/runtime/runtime';

declareModule(
    makeExtrajsxModule({
        manifest: {
            name: 'TypeErrorModule',
        },
        // Testing here mising stuff
    }),
);
